--- a/style.css
+++ b/style.css
@@ -213,22 +213,28 @@ span {
 .heading {
     text-align: center;
     font-size: 4.5rem;
-    
+
+}
+
+.about-content {
+    padding-top: 2rem;
 }
 
 .about-content h2 {
     text-align: left;
-    margin-left: 10px;
     line-height: 1.2;
+    margin-left: 10px;
+    margin-bottom: 7px;
 }
 
 .about-content h3 {
+    margin-left: 9px;
     font-size: 2.6rem;
 }
 
 .about-content p {
     font-size: 1.6rem;
-    margin: 2rem 0 ;
+    margin: 2rem 10px;
 }
 
 
@@ -292,9 +298,9 @@ span {
         }
 
         .skill-icon {
-            width: 32px;
-            height: 32px;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            width: 50px;
+            height: 50px;
+            background: linear-gradient(135deg, #667eea 0%, #0ef 100%);
             border-radius: 8px;
             display: flex;
             align-items: center;
@@ -315,11 +321,18 @@ span {
         }
 
  .skill-description {
-    color: #b0b0b0;
-    font-size: 0.8rem;       
+    color: #62a7fc;
+    font-size: 1rem;       
     line-height: 1.8;
     position: relative;
     z-index: 1;
+}
+.skill-titles {
+    font-size: 1rem;       
+    line-height: 1.8;
+    position: relative;
+    z-index: 1;
+
 }
         
 .projects {
@@ -364,7 +377,7 @@ span {
 
         .project-image {
             width: 100%;
-            height: 280px;
+            height: 150px;
             position: relative;
             display: flex;
             align-items: center;
@@ -391,7 +404,7 @@ span {
         }
 
         .project-info {
-            padding: 25px;
+            padding: 10px;
         }
 
         .project-title {
@@ -411,7 +424,7 @@ span {
 
         .project-description {
             color: white;
-            font-size: 0.95rem;
+            font-size: 1rem;
             line-height: 1.6;
             margin-bottom: 20px;
         }
@@ -419,7 +432,7 @@ span {
         
 .project-img {
   width: 100%;
-  height: auto;
+  height: 150px;
   border-radius: 8px;
   object-fit: cover;
 }
@@ -448,7 +461,8 @@ span {
     background:var(--second-bg-color);
     border-radius:.8rem;
     margin:.7rem 0;
-}
+}  
+
 .contact form .input-box input{
     width:49%;
 }
