--- a/style.css
+++ b/style.css
@@ -365,6 +365,11 @@ span {
     max-width: 70rem;
     margin: 1rem auto 3rem;
     text-align: center;
+
+}
+.contact form .input-box 
+:hover {
+    border-color: var(--main-color);
 }
 
 .contact form .input-box {
@@ -382,7 +387,15 @@ span {
     background: var(--second-bg-color);
     border-radius: .8rem;
     margin: .7rem 0;
+    color:white;
+    border: 2px solid transparent;
+
 }
+.contact form textarea:hover {
+   border-color: var(--main-color);
+
+}
+
 
 .contact form .input-box input {
     width: 49%;
